@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,8 +22,7 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
-import java.util.Collections;
-import java.util.Iterator;
+import java.util.Map;
 import java.util.Properties;
 
 import jakarta.inject.Inject;
@@ -32,6 +31,7 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.BeanDefinitionStoreException;
 import org.springframework.beans.factory.FactoryBean;
 import org.springframework.beans.testfixture.beans.TestBean;
+import org.springframework.context.ApplicationContext;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.core.annotation.AliasFor;
 import org.springframework.core.env.Environment;
@@ -40,6 +40,7 @@ import org.springframework.core.env.MutablePropertySources;
 import org.springframework.core.io.support.EncodedResource;
 import org.springframework.core.io.support.PropertiesLoaderUtils;
 import org.springframework.core.io.support.PropertySourceFactory;
+import org.springframework.util.PlaceholderResolutionException;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
@@ -56,21 +57,13 @@ class PropertySourceAnnotationTests {
 
 	@Test
 	void withExplicitName() {
-		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
-		ctx.register(ConfigWithExplicitName.class);
-		ctx.refresh();
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithExplicitName.class);
 		assertThat(ctx.getEnvironment().getPropertySources().contains("p1")).as("property source p1 was not added").isTrue();
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
 
 		// assert that the property source was added last to the set of sources
-		String name;
 		MutablePropertySources sources = ctx.getEnvironment().getPropertySources();
-		Iterator<org.springframework.core.env.PropertySource<?>> iterator = sources.iterator();
-		do {
-			name = iterator.next().getName();
-		}
-		while (iterator.hasNext());
-
+		String name = sources.stream().toList().get(sources.size() - 1).getName();
 		assertThat(name).isEqualTo("p1");
 		ctx.close();
 	}
@@ -78,7 +71,9 @@ class PropertySourceAnnotationTests {
 	@Test
 	void withImplicitName() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithImplicitName.class);
-		assertThat(ctx.getEnvironment().getPropertySources().contains("class path resource [org/springframework/context/annotation/p1.properties]")).as("property source p1 was not added").isTrue();
+		String name = "class path resource [org/springframework/context/annotation/p1.properties]";
+		assertThat(ctx.getEnvironment().getPropertySources().contains(name))
+				.as("property source p1 was not added").isTrue();
 		assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
 		ctx.close();
 	}
@@ -137,8 +132,8 @@ class PropertySourceAnnotationTests {
 	@Test
 	void withUnresolvablePlaceholder() {
 		assertThatExceptionOfType(BeanDefinitionStoreException.class)
-			.isThrownBy(() -> new AnnotationConfigApplicationContext(ConfigWithUnresolvablePlaceholder.class))
-			.withCauseInstanceOf(IllegalArgumentException.class);
+				.isThrownBy(() -> new AnnotationConfigApplicationContext(ConfigWithUnresolvablePlaceholder.class))
+				.withCauseInstanceOf(PlaceholderResolutionException.class);
 	}
 
 	@Test
@@ -169,47 +164,43 @@ class PropertySourceAnnotationTests {
 	@Test
 	void withEmptyResourceLocations() {
 		assertThatExceptionOfType(BeanDefinitionStoreException.class)
-			.isThrownBy(() -> new AnnotationConfigApplicationContext(ConfigWithEmptyResourceLocations.class))
-			.withCauseInstanceOf(IllegalArgumentException.class);
+				.isThrownBy(() -> new AnnotationConfigApplicationContext(ConfigWithEmptyResourceLocations.class))
+				.withCauseInstanceOf(IllegalArgumentException.class);
 	}
 
 	@Test
 	void withNameAndMultipleResourceLocations() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithNameAndMultipleResourceLocations.class);
-		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
 		// p2 should 'win' as it was registered last
-		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
 		ctx.close();
 	}
 
 	@Test
 	void withMultipleResourceLocations() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithMultipleResourceLocations.class);
-		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
 		// p2 should 'win' as it was registered last
-		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
 		ctx.close();
 	}
 
 	@Test
 	void withRepeatedPropertySourcesInContainerAnnotation() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithPropertySources.class);
-		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
 		// p2 should 'win' as it was registered last
-		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
 		ctx.close();
 	}
 
 	@Test
 	void withRepeatedPropertySources() {
 		try (AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithRepeatedPropertySourceAnnotations.class)) {
-			assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-			assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+			assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
 			// p2 should 'win' as it was registered last
-			assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+			assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
 		}
 	}
 
@@ -220,19 +211,16 @@ class PropertySourceAnnotationTests {
 
 		System.clearProperty(key);
 		try (ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(configClass)) {
-			assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-			assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+			assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
 			// p2 should 'win' as it was registered last
-			assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+			assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
 		}
 
 		System.setProperty(key, "org/springframework/context/annotation");
 		try (ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(configClass)) {
-			assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-			assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
-			assertThat(ctx.getEnvironment().containsProperty("from.p3")).isTrue();
+			assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2", "from.p3");
 			// p3 should 'win' as it was registered last
-			assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p3TestBean");
+			assertEnvironmentProperty(ctx, "testbean.name", "p3TestBean");
 		}
 		finally {
 			System.clearProperty(key);
@@ -240,36 +228,51 @@ class PropertySourceAnnotationTests {
 	}
 
 	@Test
+	void multipleComposedPropertySourceAnnotations() {  // gh-30941
+		ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(MultipleComposedAnnotationsConfig.class);
+		ctx.getBean(MultipleComposedAnnotationsConfig.class);
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2", "from.p3", "from.p4", "from.p5");
+		// p5 should 'win' as it is registered via the last "locally declared" direct annotation
+		assertEnvironmentProperty(ctx, "testbean.name", "p5TestBean");
+		ctx.close();
+	}
+
+	@Test
+	void multipleResourcesFromPropertySourcePattern() {  // gh-21325
+		ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(ResourcePatternConfig.class);
+		ctx.getBean(ResourcePatternConfig.class);
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2", "from.p3", "from.p4", "from.p5");
+		ctx.close();
+	}
+
+	@Test
 	void withNamedPropertySources() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithNamedPropertySources.class);
-		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
 		// p2 should 'win' as it was registered last
-		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
 		ctx.close();
 	}
 
 	@Test
 	void withMissingPropertySource() {
 		assertThatExceptionOfType(BeanDefinitionStoreException.class)
-			.isThrownBy(() -> new AnnotationConfigApplicationContext(ConfigWithMissingPropertySource.class))
-			.withCauseInstanceOf(FileNotFoundException.class);
+				.isThrownBy(() -> new AnnotationConfigApplicationContext(ConfigWithMissingPropertySource.class))
+				.withCauseInstanceOf(FileNotFoundException.class);
 	}
 
 	@Test
 	void withIgnoredPropertySource() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithIgnoredPropertySource.class);
-		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
 		ctx.close();
 	}
 
 	@Test
 	void withSameSourceImportedInDifferentOrder() {
 		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithSameSourceImportedInDifferentOrder.class);
-		assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-		assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
-		assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+		assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
+		assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
 		ctx.close();
 	}
 
@@ -278,30 +281,41 @@ class PropertySourceAnnotationTests {
 		// SPR-10820: p2 should 'win' as it was registered last
 		AnnotationConfigApplicationContext ctxWithName = new AnnotationConfigApplicationContext(ConfigWithNameAndMultipleResourceLocations.class);
 		AnnotationConfigApplicationContext ctxWithoutName = new AnnotationConfigApplicationContext(ConfigWithMultipleResourceLocations.class);
-		assertThat(ctxWithoutName.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
-		assertThat(ctxWithName.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+		assertEnvironmentProperty(ctxWithName, "testbean.name", "p2TestBean");
+		assertEnvironmentProperty(ctxWithoutName, "testbean.name", "p2TestBean");
 		ctxWithName.close();
 		ctxWithoutName.close();
 	}
 
 	@Test
-	void orderingWithAndWithoutNameAndFourResourceLocations() {
+	void orderingWithFourResourceLocations() {
 		// SPR-12198: p4 should 'win' as it was registered last
-		AnnotationConfigApplicationContext ctxWithoutName = new AnnotationConfigApplicationContext(ConfigWithFourResourceLocations.class);
-		assertThat(ctxWithoutName.getEnvironment().getProperty("testbean.name")).isEqualTo("p4TestBean");
-		ctxWithoutName.close();
+		AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithFourResourceLocations.class);
+		assertEnvironmentProperty(ctx, "testbean.name", "p4TestBean");
+		ctx.close();
 	}
 
 	@Test
-	void orderingDoesntReplaceExisting() throws Exception {
+	void orderingDoesntReplaceExisting() {
 		// SPR-12198: mySource should 'win' as it was registered manually
 		AnnotationConfigApplicationContext ctxWithoutName = new AnnotationConfigApplicationContext();
-		MapPropertySource mySource = new MapPropertySource("mine", Collections.singletonMap("testbean.name", "myTestBean"));
+		MapPropertySource mySource = new MapPropertySource("mine", Map.of("testbean.name", "myTestBean"));
 		ctxWithoutName.getEnvironment().getPropertySources().addLast(mySource);
 		ctxWithoutName.register(ConfigWithFourResourceLocations.class);
 		ctxWithoutName.refresh();
-		assertThat(ctxWithoutName.getEnvironment().getProperty("testbean.name")).isEqualTo("myTestBean");
+		assertEnvironmentProperty(ctxWithoutName, "testbean.name", "myTestBean");
 		ctxWithoutName.close();
+	}
+
+
+	private static void assertEnvironmentContainsProperties(ApplicationContext ctx, String... names) {
+		for (String name : names) {
+			assertThat(ctx.getEnvironment().containsProperty(name)).as("environment contains property '%s'", name).isTrue();
+		}
+	}
+
+	private static void assertEnvironmentProperty(ApplicationContext ctx, String name, Object value) {
+		assertThat(ctx.getEnvironment().getProperty(name)).as("environment property '%s'", name).isEqualTo(value);
 	}
 
 
@@ -496,6 +510,34 @@ class PropertySourceAnnotationTests {
 	static class ConfigWithRepeatedPropertySourceAnnotationsOnComposedAnnotation {
 	}
 
+	@Retention(RetentionPolicy.RUNTIME)
+	@PropertySource("classpath:org/springframework/context/annotation/p1.properties")
+	@interface PropertySource1 {
+	}
+
+	@Retention(RetentionPolicy.RUNTIME)
+	@PropertySource("classpath:org/springframework/context/annotation/p2.properties")
+	@PropertySources({
+		@PropertySource("classpath:org/springframework/context/annotation/p3.properties"),
+	})
+	@interface PropertySource23 {
+	}
+
+	@Configuration
+	@PropertySource1
+	@PropertySource23
+	@PropertySources({
+		@PropertySource("classpath:org/springframework/context/annotation/p4.properties")
+	})
+	@PropertySource("classpath:org/springframework/context/annotation/p5.properties")
+	static class MultipleComposedAnnotationsConfig {
+	}
+
+
+	@PropertySource("classpath*:org/springframework/context/annotation/p?.properties")
+	static class ResourcePatternConfig {
+	}
+
 
 	@Configuration
 	@PropertySources({
@@ -540,7 +582,6 @@ class PropertySourceAnnotationTests {
 	})
 	@Configuration
 	static class ConfigWithSameSourceImportedInDifferentOrder {
-
 	}
 
 
