@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2023 the original author or authors.
+ * Copyright 2002-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,12 +17,14 @@
 package org.springframework.web.reactive.function.client;
 
 import java.net.InetSocketAddress;
-import java.nio.ByteBuffer;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.OptionalLong;
 
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import reactor.core.publisher.Flux;
@@ -33,10 +35,11 @@ import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.core.codec.ByteArrayDecoder;
 import org.springframework.core.codec.StringDecoder;
 import org.springframework.core.io.buffer.DataBuffer;
-import org.springframework.core.io.buffer.DefaultDataBuffer;
 import org.springframework.core.io.buffer.DefaultDataBufferFactory;
 import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpRange;
+import org.springframework.http.HttpRequest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.http.MediaType;
@@ -44,7 +47,7 @@ import org.springframework.http.ResponseCookie;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.client.reactive.ClientHttpResponse;
 import org.springframework.http.codec.DecoderHttpMessageReader;
-import org.springframework.http.codec.HttpMessageReader;
+import org.springframework.http.codec.json.Jackson2JsonDecoder;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 
@@ -60,11 +63,16 @@ import static org.springframework.web.reactive.function.BodyExtractors.toMono;
  */
 class DefaultClientResponseTests {
 
-	private ClientHttpResponse mockResponse = mock();
+	private static final ParameterizedTypeReference<String> STRING_TYPE = new ParameterizedTypeReference<>() {};
+
+
+	private final ClientHttpResponse mockResponse = mock();
 
 	private final HttpHeaders httpHeaders = new HttpHeaders();
 
-	private ExchangeStrategies mockExchangeStrategies = mock();
+	private final ExchangeStrategies mockExchangeStrategies = mock();
+
+	private @Nullable HttpRequest httpRequest = null;
 
 	private DefaultClientResponse defaultClientResponse;
 
@@ -72,8 +80,7 @@ class DefaultClientResponseTests {
 	@BeforeEach
 	void configureMocks() {
 		given(mockResponse.getHeaders()).willReturn(this.httpHeaders);
-
-		defaultClientResponse = new DefaultClientResponse(mockResponse, mockExchangeStrategies, "", "", () -> null);
+		defaultClientResponse = new DefaultClientResponse(mockResponse, mockExchangeStrategies, "", "", () -> httpRequest);
 	}
 
 
@@ -93,8 +100,7 @@ class DefaultClientResponseTests {
 		httpHeaders.setContentType(contentType);
 		InetSocketAddress host = InetSocketAddress.createUnresolved("localhost", 80);
 		httpHeaders.setHost(host);
-		List<HttpRange> range = Collections.singletonList(HttpRange.createByteRange(0, 42));
-		httpHeaders.setRange(range);
+		httpHeaders.setRange(List.of(HttpRange.createByteRange(0, 42)));
 
 		given(mockResponse.getHeaders()).willReturn(httpHeaders);
 
@@ -119,13 +125,11 @@ class DefaultClientResponseTests {
 	@Test
 	void body() {
 		byte[] bytes = "foo".getBytes(StandardCharsets.UTF_8);
-		DefaultDataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(ByteBuffer.wrap(bytes));
-		Flux<DataBuffer> body = Flux.just(dataBuffer);
-		mockTextPlainResponse(body);
+		DataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
+		mockTextPlainResponse(Flux.just(dataBuffer));
 
-		List<HttpMessageReader<?>> messageReaders = Collections
-				.singletonList(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes()));
-		given(mockExchangeStrategies.messageReaders()).willReturn(messageReaders);
+		given(mockExchangeStrategies.messageReaders()).willReturn(
+				List.of(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes())));
 
 		Mono<String> resultMono = defaultClientResponse.body(toMono(String.class));
 		assertThat(resultMono.block()).isEqualTo("foo");
@@ -134,13 +138,11 @@ class DefaultClientResponseTests {
 	@Test
 	void bodyToMono() {
 		byte[] bytes = "foo".getBytes(StandardCharsets.UTF_8);
-		DefaultDataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(ByteBuffer.wrap(bytes));
-		Flux<DataBuffer> body = Flux.just(dataBuffer);
-		mockTextPlainResponse(body);
+		DataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
+		mockTextPlainResponse(Flux.just(dataBuffer));
 
-		List<HttpMessageReader<?>> messageReaders = Collections
-				.singletonList(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes()));
-		given(mockExchangeStrategies.messageReaders()).willReturn(messageReaders);
+		given(mockExchangeStrategies.messageReaders()).willReturn(
+				List.of(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes())));
 
 		Mono<String> resultMono = defaultClientResponse.bodyToMono(String.class);
 		assertThat(resultMono.block()).isEqualTo("foo");
@@ -149,177 +151,140 @@ class DefaultClientResponseTests {
 	@Test
 	void bodyToMonoTypeReference() {
 		byte[] bytes = "foo".getBytes(StandardCharsets.UTF_8);
-		DefaultDataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(ByteBuffer.wrap(bytes));
-		Flux<DataBuffer> body = Flux.just(dataBuffer);
-		mockTextPlainResponse(body);
+		DataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
+		mockTextPlainResponse(Flux.just(dataBuffer));
 
-		List<HttpMessageReader<?>> messageReaders = Collections
-				.singletonList(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes()));
-		given(mockExchangeStrategies.messageReaders()).willReturn(messageReaders);
+		given(mockExchangeStrategies.messageReaders()).willReturn(
+				List.of(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes())));
 
-		Mono<String> resultMono =
-				defaultClientResponse.bodyToMono(new ParameterizedTypeReference<String>() {
-				});
+		Mono<String> resultMono = defaultClientResponse.bodyToMono(STRING_TYPE);
 		assertThat(resultMono.block()).isEqualTo("foo");
 	}
 
 	@Test
 	void bodyToFlux() {
 		byte[] bytes = "foo".getBytes(StandardCharsets.UTF_8);
-		DefaultDataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(ByteBuffer.wrap(bytes));
-		Flux<DataBuffer> body = Flux.just(dataBuffer);
-		mockTextPlainResponse(body);
+		DataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
+		mockTextPlainResponse(Flux.just(dataBuffer));
 
-		List<HttpMessageReader<?>> messageReaders = Collections
-				.singletonList(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes()));
-		given(mockExchangeStrategies.messageReaders()).willReturn(messageReaders);
+		given(mockExchangeStrategies.messageReaders()).willReturn(
+				List.of(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes())));
 
 		Flux<String> resultFlux = defaultClientResponse.bodyToFlux(String.class);
 		Mono<List<String>> result = resultFlux.collectList();
-		assertThat(result.block()).isEqualTo(Collections.singletonList("foo"));
+		assertThat(result.block()).containsExactly("foo");
 	}
 
 	@Test
 	void bodyToFluxTypeReference() {
 		byte[] bytes = "foo".getBytes(StandardCharsets.UTF_8);
-		DefaultDataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(ByteBuffer.wrap(bytes));
-		Flux<DataBuffer> body = Flux.just(dataBuffer);
-		mockTextPlainResponse(body);
+		DataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
+		mockTextPlainResponse(Flux.just(dataBuffer));
 
-		List<HttpMessageReader<?>> messageReaders = Collections
-				.singletonList(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes()));
-		given(mockExchangeStrategies.messageReaders()).willReturn(messageReaders);
+		given(mockExchangeStrategies.messageReaders()).willReturn(
+				List.of(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes())));
 
-		Flux<String> resultFlux =
-				defaultClientResponse.bodyToFlux(new ParameterizedTypeReference<String>() {
-				});
+		Flux<String> resultFlux = defaultClientResponse.bodyToFlux(STRING_TYPE);
 		Mono<List<String>> result = resultFlux.collectList();
-		assertThat(result.block()).isEqualTo(Collections.singletonList("foo"));
+		assertThat(result.block()).containsExactly("foo");
 	}
 
 	@Test
-	@SuppressWarnings("deprecation")
 	void toEntity() {
 		byte[] bytes = "foo".getBytes(StandardCharsets.UTF_8);
-		DefaultDataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(ByteBuffer.wrap(bytes));
-		Flux<DataBuffer> body = Flux.just(dataBuffer);
-		mockTextPlainResponse(body);
+		DataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
+		mockTextPlainResponse(Flux.just(dataBuffer));
 
-		List<HttpMessageReader<?>> messageReaders = Collections
-				.singletonList(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes()));
-		given(mockExchangeStrategies.messageReaders()).willReturn(messageReaders);
+		given(mockExchangeStrategies.messageReaders()).willReturn(
+				List.of(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes())));
 
 		ResponseEntity<String> result = defaultClientResponse.toEntity(String.class).block();
 		assertThat(result.getBody()).isEqualTo("foo");
 		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
-		assertThat(result.getStatusCodeValue()).isEqualTo(HttpStatus.OK.value());
 		assertThat(result.getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
 	}
 
 	@Test
-	@SuppressWarnings("deprecation")
-	void toEntityWithUnknownStatusCode() throws Exception {
+	void toEntityWithUnknownStatusCode() {
 		byte[] bytes = "foo".getBytes(StandardCharsets.UTF_8);
-		DefaultDataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(ByteBuffer.wrap(bytes));
-		Flux<DataBuffer> body = Flux.just(dataBuffer);
+		DataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
 
 		httpHeaders.setContentType(MediaType.TEXT_PLAIN);
 		given(mockResponse.getHeaders()).willReturn(httpHeaders);
 		given(mockResponse.getStatusCode()).willReturn(HttpStatusCode.valueOf(999));
-		given(mockResponse.getBody()).willReturn(body);
+		given(mockResponse.getBody()).willReturn(Flux.just(dataBuffer));
 
-		List<HttpMessageReader<?>> messageReaders = Collections
-				.singletonList(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes()));
-		given(mockExchangeStrategies.messageReaders()).willReturn(messageReaders);
+		given(mockExchangeStrategies.messageReaders()).willReturn(
+				List.of(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes())));
 
 		ResponseEntity<String> result = defaultClientResponse.toEntity(String.class).block();
 		assertThat(result.getBody()).isEqualTo("foo");
-		assertThat(result.getStatusCode()).isEqualTo(HttpStatusCode.valueOf(999));
-		assertThat(result.getStatusCodeValue()).isEqualTo(999);
+		assertThat(result.getStatusCode().value()).isEqualTo(999);
 		assertThat(result.getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
 	}
 
 	@Test
-	@SuppressWarnings("deprecation")
 	void toEntityTypeReference() {
 		byte[] bytes = "foo".getBytes(StandardCharsets.UTF_8);
-		DefaultDataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(ByteBuffer.wrap(bytes));
-		Flux<DataBuffer> body = Flux.just(dataBuffer);
-		mockTextPlainResponse(body);
+		DataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
+		mockTextPlainResponse(Flux.just(dataBuffer));
 
-		List<HttpMessageReader<?>> messageReaders = Collections
-				.singletonList(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes()));
-		given(mockExchangeStrategies.messageReaders()).willReturn(messageReaders);
+		given(mockExchangeStrategies.messageReaders()).willReturn(
+				List.of(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes())));
 
-		ResponseEntity<String> result = defaultClientResponse.toEntity(
-				new ParameterizedTypeReference<String>() {
-				}).block();
+		ResponseEntity<String> result = defaultClientResponse.toEntity(STRING_TYPE).block();
 		assertThat(result.getBody()).isEqualTo("foo");
 		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
-		assertThat(result.getStatusCodeValue()).isEqualTo(HttpStatus.OK.value());
 		assertThat(result.getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
 	}
 
 	@Test
-	@SuppressWarnings("deprecation")
 	void toEntityList() {
 		byte[] bytes = "foo".getBytes(StandardCharsets.UTF_8);
-		DefaultDataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(ByteBuffer.wrap(bytes));
-		Flux<DataBuffer> body = Flux.just(dataBuffer);
-		mockTextPlainResponse(body);
+		DataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
+		mockTextPlainResponse(Flux.just(dataBuffer));
 
-		List<HttpMessageReader<?>> messageReaders = Collections
-				.singletonList(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes()));
-		given(mockExchangeStrategies.messageReaders()).willReturn(messageReaders);
+		given(mockExchangeStrategies.messageReaders()).willReturn(
+				List.of(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes())));
 
 		ResponseEntity<List<String>> result = defaultClientResponse.toEntityList(String.class).block();
-		assertThat(result.getBody()).isEqualTo(Collections.singletonList("foo"));
+		assertThat(result.getBody()).containsExactly("foo");
 		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
-		assertThat(result.getStatusCodeValue()).isEqualTo(HttpStatus.OK.value());
 		assertThat(result.getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
 	}
 
 	@Test
-	@SuppressWarnings("deprecation")
 	void toEntityListWithUnknownStatusCode() {
 		byte[] bytes = "foo".getBytes(StandardCharsets.UTF_8);
-		DefaultDataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(ByteBuffer.wrap(bytes));
-		Flux<DataBuffer> body = Flux.just(dataBuffer);
+		DataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
 
 		httpHeaders.setContentType(MediaType.TEXT_PLAIN);
 		given(mockResponse.getHeaders()).willReturn(httpHeaders);
 		given(mockResponse.getStatusCode()).willReturn(HttpStatusCode.valueOf(999));
-		given(mockResponse.getBody()).willReturn(body);
+		given(mockResponse.getBody()).willReturn(Flux.just(dataBuffer));
 
-		List<HttpMessageReader<?>> messageReaders = Collections
-				.singletonList(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes()));
-		given(mockExchangeStrategies.messageReaders()).willReturn(messageReaders);
+		given(mockExchangeStrategies.messageReaders()).willReturn(
+				List.of(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes())));
 
 		ResponseEntity<List<String>> result = defaultClientResponse.toEntityList(String.class).block();
-		assertThat(result.getBody()).isEqualTo(Collections.singletonList("foo"));
+		assertThat(result.getBody()).containsExactly("foo");
 		assertThat(result.getStatusCode()).isEqualTo(HttpStatusCode.valueOf(999));
-		assertThat(result.getStatusCodeValue()).isEqualTo(999);
 		assertThat(result.getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
 	}
 
 	@Test
-	@SuppressWarnings("deprecation")
 	void toEntityListTypeReference() {
 		byte[] bytes = "foo".getBytes(StandardCharsets.UTF_8);
-		DefaultDataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(ByteBuffer.wrap(bytes));
-		Flux<DataBuffer> body = Flux.just(dataBuffer);
+		DataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
 
-		mockTextPlainResponse(body);
+		mockTextPlainResponse(Flux.just(dataBuffer));
 
-		List<HttpMessageReader<?>> messageReaders = Collections
-				.singletonList(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes()));
-		given(mockExchangeStrategies.messageReaders()).willReturn(messageReaders);
+		given(mockExchangeStrategies.messageReaders()).willReturn(
+				List.of(new DecoderHttpMessageReader<>(StringDecoder.allMimeTypes())));
 
-		ResponseEntity<List<String>> result = defaultClientResponse.toEntityList(
-				new ParameterizedTypeReference<String>() {}).block();
-		assertThat(result.getBody()).isEqualTo(Collections.singletonList("foo"));
+		ResponseEntity<List<String>> result = defaultClientResponse.toEntityList(STRING_TYPE).block();
+		assertThat(result.getBody()).containsExactly("foo");
 		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
-		assertThat(result.getStatusCodeValue()).isEqualTo(HttpStatus.OK.value());
 		assertThat(result.getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
 	}
 
@@ -327,38 +292,93 @@ class DefaultClientResponseTests {
 	@SuppressWarnings("deprecation")
 	void createException() {
 		byte[] bytes = "foo".getBytes(StandardCharsets.UTF_8);
-		DefaultDataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(ByteBuffer.wrap(bytes));
-		Flux<DataBuffer> body = Flux.just(dataBuffer);
+		DataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
+
 		httpHeaders.setContentType(MediaType.TEXT_PLAIN);
 		given(mockResponse.getStatusCode()).willReturn(HttpStatus.NOT_FOUND);
-		given(mockResponse.getBody()).willReturn(body);
+		given(mockResponse.getBody()).willReturn(Flux.just(dataBuffer));
 
-		List<HttpMessageReader<?>> messageReaders = Collections.singletonList(
-				new DecoderHttpMessageReader<>(new ByteArrayDecoder()));
-		given(mockExchangeStrategies.messageReaders()).willReturn(messageReaders);
+		httpRequest = new HttpRequest() {
+			@Override
+			public HttpMethod getMethod() {
+				return HttpMethod.valueOf("UNKNOWN");
+			}
+
+			@Override
+			public URI getURI() {
+				return URI.create("https://user:pass@example.org:9999/app/path?token=secret#fragment");
+			}
+
+			@Override
+			public HttpHeaders getHeaders() {
+				return HttpHeaders.EMPTY;
+			}
+
+			@Override
+			public Map<String, Object> getAttributes() {
+				return Collections.emptyMap();
+			}
+		};
+
+		given(mockExchangeStrategies.messageReaders()).willReturn(
+				List.of(new DecoderHttpMessageReader<>(new ByteArrayDecoder())));
 
 		Mono<WebClientResponseException> resultMono = defaultClientResponse.createException();
 		WebClientResponseException exception = resultMono.block();
 		assertThat(exception.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
-		assertThat(exception.getMessage()).isEqualTo("404 Not Found");
-		assertThat(exception.getHeaders()).containsExactly(entry("Content-Type",
-				Collections.singletonList("text/plain")));
+		assertThat(exception.getMessage()).isEqualTo("404 Not Found from UNKNOWN https://example.org:9999/app/path");
+		assertThat(exception.getHeaders().containsHeaderValue("Content-Type", "text/plain")).isTrue();
 		assertThat(exception.getResponseBodyAsByteArray()).isEqualTo(bytes);
+	}
+
+	@Test
+	@SuppressWarnings("unchecked")
+	void createExceptionAndDecodeContent() {
+		byte[] bytes = "{\"name\":\"Jason\"}".getBytes(StandardCharsets.UTF_8);
+		DataBuffer buffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
+
+		httpHeaders.setContentType(MediaType.APPLICATION_JSON);
+		given(mockResponse.getStatusCode()).willReturn(HttpStatus.NOT_FOUND);
+		given(mockResponse.getBody()).willReturn(Flux.just(buffer));
+
+		given(mockExchangeStrategies.messageReaders()).willReturn(List.of(
+				new DecoderHttpMessageReader<>(new ByteArrayDecoder()),
+				new DecoderHttpMessageReader<>(new Jackson2JsonDecoder())));
+
+		WebClientResponseException ex = defaultClientResponse.createException().block();
+		assertThat(ex.getResponseBodyAs(Map.class)).containsExactly(entry("name", "Jason"));
+	}
+
+	@Test
+	@SuppressWarnings("unchecked")
+	void createExceptionAndDecodeWithoutContent() {
+		byte[] bytes = new byte[0];
+		DataBuffer buffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
+
+		httpHeaders.setContentType(MediaType.APPLICATION_JSON);
+		given(mockResponse.getStatusCode()).willReturn(HttpStatus.NOT_FOUND);
+		given(mockResponse.getBody()).willReturn(Flux.just(buffer));
+
+		given(mockExchangeStrategies.messageReaders()).willReturn(List.of(
+				new DecoderHttpMessageReader<>(new ByteArrayDecoder()),
+				new DecoderHttpMessageReader<>(new Jackson2JsonDecoder())));
+
+		WebClientResponseException ex = defaultClientResponse.createException().block();
+		assertThat(ex.getResponseBodyAs(Map.class)).isNull();
 	}
 
 	@Test
 	@SuppressWarnings("deprecation")
 	void createError() {
 		byte[] bytes = "foo".getBytes(StandardCharsets.UTF_8);
-		DefaultDataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(ByteBuffer.wrap(bytes));
-		Flux<DataBuffer> body = Flux.just(dataBuffer);
+		DataBuffer dataBuffer = DefaultDataBufferFactory.sharedInstance.wrap(bytes);
+
 		httpHeaders.setContentType(MediaType.TEXT_PLAIN);
 		given(mockResponse.getStatusCode()).willReturn(HttpStatus.NOT_FOUND);
-		given(mockResponse.getBody()).willReturn(body);
+		given(mockResponse.getBody()).willReturn(Flux.just(dataBuffer));
 
-		List<HttpMessageReader<?>> messageReaders = Collections.singletonList(
-				new DecoderHttpMessageReader<>(new ByteArrayDecoder()));
-		given(mockExchangeStrategies.messageReaders()).willReturn(messageReaders);
+		given(mockExchangeStrategies.messageReaders()).willReturn(
+				List.of(new DecoderHttpMessageReader<>(new ByteArrayDecoder())));
 
 		Mono<String> resultMono = defaultClientResponse.createError();
 		StepVerifier.create(resultMono)
@@ -367,16 +387,13 @@ class DefaultClientResponseTests {
 					WebClientResponseException exception = (WebClientResponseException) t;
 					assertThat(exception.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 					assertThat(exception.getMessage()).isEqualTo("404 Not Found");
-					assertThat(exception.getHeaders()).containsExactly(entry("Content-Type",
-							Collections.singletonList("text/plain")));
+					assertThat(exception.getHeaders().containsHeaderValue("Content-Type", "text/plain"));
 					assertThat(exception.getResponseBodyAsByteArray()).isEqualTo(bytes);
-
 				})
 				.verify();
 	}
 
 
-	@SuppressWarnings("deprecation")
 	private void mockTextPlainResponse(Flux<DataBuffer> body) {
 		httpHeaders.setContentType(MediaType.TEXT_PLAIN);
 		given(mockResponse.getStatusCode()).willReturn(HttpStatus.OK);
