@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2023 the original author or authors.
+ * Copyright 2002-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,13 +21,13 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import org.springframework.core.Ordered;
-import org.springframework.lang.Nullable;
+import org.springframework.http.server.RequestPath;
 import org.springframework.ui.ModelMap;
-import org.springframework.util.AntPathMatcher;
 import org.springframework.util.PathMatcher;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.context.request.WebRequestInterceptor;
@@ -35,9 +35,9 @@ import org.springframework.web.servlet.HandlerInterceptor;
 import org.springframework.web.servlet.handler.MappedInterceptor;
 import org.springframework.web.servlet.handler.WebRequestHandlerInterceptorAdapter;
 import org.springframework.web.servlet.i18n.LocaleChangeInterceptor;
-import org.springframework.web.servlet.theme.ThemeChangeInterceptor;
 import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
 import org.springframework.web.testfixture.servlet.MockHttpServletResponse;
+import org.springframework.web.util.ServletRequestPathUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.fail;
@@ -57,7 +57,7 @@ public class InterceptorRegistryTests {
 
 	private final HandlerInterceptor interceptor1 = new LocaleChangeInterceptor();
 
-	private final HandlerInterceptor interceptor2 = new ThemeChangeInterceptor();
+	private final HandlerInterceptor interceptor2 = new LocaleChangeInterceptor();
 
 	private TestWebRequestInterceptor webInterceptor1;
 
@@ -69,21 +69,21 @@ public class InterceptorRegistryTests {
 
 
 	@BeforeEach
-	public void setUp() {
+	void setUp() {
 		this.registry = new InterceptorRegistry();
 		this.webInterceptor1 = new TestWebRequestInterceptor();
 		this.webInterceptor2 = new TestWebRequestInterceptor();
 	}
 
 	@Test
-	public void addInterceptor() {
+	void addInterceptor() {
 		this.registry.addInterceptor(this.interceptor1);
 		List<HandlerInterceptor> interceptors = getInterceptorsForPath(null);
-		assertThat(interceptors).isEqualTo(Arrays.asList(this.interceptor1));
+		assertThat(interceptors).isEqualTo(List.of(this.interceptor1));
 	}
 
 	@Test
-	public void addTwoInterceptors() {
+	void addTwoInterceptors() {
 		this.registry.addInterceptor(this.interceptor1);
 		this.registry.addInterceptor(this.interceptor2);
 		List<HandlerInterceptor> interceptors = getInterceptorsForPath(null);
@@ -91,17 +91,17 @@ public class InterceptorRegistryTests {
 	}
 
 	@Test
-	public void addInterceptorsWithUrlPatterns() {
+	void addInterceptorsWithUrlPatterns() {
 		this.registry.addInterceptor(this.interceptor1).addPathPatterns("/path1/**").excludePathPatterns("/path1/secret");
 		this.registry.addInterceptor(this.interceptor2).addPathPatterns("/path2");
 
-		assertThat(getInterceptorsForPath("/path1/test")).isEqualTo(Arrays.asList(this.interceptor1));
-		assertThat(getInterceptorsForPath("/path2")).isEqualTo(Arrays.asList(this.interceptor2));
-		assertThat(getInterceptorsForPath("/path1/secret")).isEqualTo(Collections.emptyList());
+		assertThat(getInterceptorsForPath("/path1/test")).containsExactly(this.interceptor1);
+		assertThat(getInterceptorsForPath("/path2")).containsExactly(this.interceptor2);
+		assertThat(getInterceptorsForPath("/path1/secret")).isEmpty();
 	}
 
 	@Test
-	public void addWebRequestInterceptor() throws Exception {
+	void addWebRequestInterceptor() throws Exception {
 		this.registry.addWebRequestInterceptor(this.webInterceptor1);
 		List<HandlerInterceptor> interceptors = getInterceptorsForPath(null);
 
@@ -110,7 +110,7 @@ public class InterceptorRegistryTests {
 	}
 
 	@Test
-	public void addWebRequestInterceptors() throws Exception {
+	void addWebRequestInterceptors() throws Exception {
 		this.registry.addWebRequestInterceptor(this.webInterceptor1);
 		this.registry.addWebRequestInterceptor(this.webInterceptor2);
 		List<HandlerInterceptor> interceptors = getInterceptorsForPath(null);
@@ -120,8 +120,9 @@ public class InterceptorRegistryTests {
 		verifyWebInterceptor(interceptors.get(1), this.webInterceptor2);
 	}
 
+	@SuppressWarnings("removal")
 	@Test
-	public void addInterceptorsWithCustomPathMatcher() {
+	void addInterceptorsWithCustomPathMatcher() {
 		PathMatcher pathMatcher = mock();
 		this.registry.addInterceptor(interceptor1).addPathPatterns("/path1/**").pathMatcher(pathMatcher);
 
@@ -130,7 +131,7 @@ public class InterceptorRegistryTests {
 	}
 
 	@Test
-	public void addWebRequestInterceptorsWithUrlPatterns() throws Exception {
+	void addWebRequestInterceptorsWithUrlPatterns() throws Exception {
 		this.registry.addWebRequestInterceptor(this.webInterceptor1).addPathPatterns("/path1");
 		this.registry.addWebRequestInterceptor(this.webInterceptor2).addPathPatterns("/path2");
 
@@ -154,36 +155,37 @@ public class InterceptorRegistryTests {
 	}
 
 	@Test
-	public void orderedInterceptors() {
+	void orderedInterceptors() {
 		this.registry.addInterceptor(this.interceptor1).order(Ordered.LOWEST_PRECEDENCE);
 		this.registry.addInterceptor(this.interceptor2).order(Ordered.HIGHEST_PRECEDENCE);
 
 		List<Object> interceptors = this.registry.getInterceptors();
 		assertThat(interceptors).hasSize(2);
 
-		assertThat(interceptors.get(0)).isSameAs(this.interceptor2);
-		assertThat(interceptors.get(1)).isSameAs(this.interceptor1);
+		assertThat(interceptors).element(0).isSameAs(this.interceptor2);
+		assertThat(interceptors).element(1).isSameAs(this.interceptor1);
 	}
 
 	@Test
-	public void nonOrderedInterceptors() {
+	void nonOrderedInterceptors() {
 		this.registry.addInterceptor(this.interceptor1).order(0);
 		this.registry.addInterceptor(this.interceptor2).order(0);
 
 		List<Object> interceptors = this.registry.getInterceptors();
 		assertThat(interceptors).hasSize(2);
 
-		assertThat(interceptors.get(0)).isSameAs(this.interceptor1);
-		assertThat(interceptors.get(1)).isSameAs(this.interceptor2);
+		assertThat(interceptors).element(0).isSameAs(this.interceptor1);
+		assertThat(interceptors).element(1).isSameAs(this.interceptor2);
 	}
 
 
-	private List<HandlerInterceptor> getInterceptorsForPath(String lookupPath) {
-		PathMatcher pathMatcher = new AntPathMatcher();
+	private List<HandlerInterceptor> getInterceptorsForPath(@Nullable String lookupPath) {
+		lookupPath = (lookupPath != null ? lookupPath : "");
+		this.request.setAttribute(ServletRequestPathUtils.PATH_ATTRIBUTE, RequestPath.parse(lookupPath, null));
 		List<HandlerInterceptor> result = new ArrayList<>();
 		for (Object interceptor : this.registry.getInterceptors()) {
 			if (interceptor instanceof MappedInterceptor mappedInterceptor) {
-				if (mappedInterceptor.matches(lookupPath, pathMatcher)) {
+				if (mappedInterceptor.matches(this.request)) {
 					result.add(mappedInterceptor.getInterceptor());
 				}
 			}
@@ -212,16 +214,16 @@ public class InterceptorRegistryTests {
 		private boolean preHandleInvoked = false;
 
 		@Override
-		public void preHandle(WebRequest request) throws Exception {
+		public void preHandle(WebRequest request) {
 			preHandleInvoked = true;
 		}
 
 		@Override
-		public void postHandle(WebRequest request, @Nullable ModelMap model) throws Exception {
+		public void postHandle(WebRequest request, @Nullable ModelMap model) {
 		}
 
 		@Override
-		public void afterCompletion(WebRequest request, @Nullable Exception ex) throws Exception {
+		public void afterCompletion(WebRequest request, @Nullable Exception ex) {
 		}
 	}
 
